--- a/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
+++ b/src/app/modules/ClassSubject/studentsubjectdashboard/studentsubjectdashboard.component.scss
@@ -49,7 +49,7 @@ mat-cell{
 .mat-column-Action{
     padding: 10px;
     display: flex;
-    justify-content: space-between;
+    //justify-content: space-between;
     flex:1 1 150px;
 }
 
