--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.html
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.html
@@ -5,7 +5,7 @@
 <!-- <alert></alert> -->
 <!-- <div style="padding: 15px;" fxLayout="row wrap"> -->
 <form [formGroup]="searchForm">
-    <mat-form-field appearance="outline" style="width:150px">
+    <mat-form-field appearance="outline" style="width:250px">
         <mat-label>Exam</mat-label>
         <mat-select formControlName="searchExamId" (selectionChange)="FilterClass()">
             <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
@@ -13,7 +13,7 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <mat-form-field appearance="outline" style="width:150px">
+    <mat-form-field appearance="outline" style="width:100px">
         <mat-label>Class</mat-label>
         <mat-select formControlName="searchClassId" (selectionChange)="GetStudentGrade()">
             <mat-option *ngFor="let item of FilteredClasses" [value]="item.ClassId">
@@ -21,7 +21,7 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <mat-form-field appearance="outline" style="width:150px">
+    <mat-form-field appearance="outline" style="width:100px">
         <mat-label>Section</mat-label>
         <mat-select formControlName="searchSectionId">
             <mat-option value="0">select</mat-option>
@@ -50,7 +50,7 @@
     <div *ngIf="ExamStudentSubjectResult.length>0">
         <mat-table #table [dataSource]="dataSource" matSort>
             <ng-container *ngFor="let disCol of displayedColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                <mat-header-cell *matHeaderCellDef mat-sort-header style="writing-mode: tb-rl;transform: rotate(-180deg);width:100%;display:flex; justify-content: center;">
+                <mat-header-cell *matHeaderCellDef mat-sort-header style="writing-mode: tb-rl;transform: rotate(-180deg);width:100%;display:flex; justify-content: flex-start;margin-bottom: 10px;">
                     {{disCol!='Action'?disCol:''}}
                 </mat-header-cell>
                 <mat-cell *matCellDef="let element" style="width:100%;align-self: stretch;">
