--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -2,9 +2,8 @@
     <div><strong>Class Student</strong></div>
 </div>
 <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-<form style="display: flex;flex-direction: row;justify-content: space-around;" [formGroup]="searchForm">
+<form style="display: flex;flex-direction:column;justify-content: space-around;" [formGroup]="searchForm">
     <div>
-
         <mat-form-field appearance="outline" style="width: 150px;">
             <mat-label>Class</mat-label>
             <mat-select formControlName="searchClassId">
@@ -53,8 +52,23 @@
             <mat-icon>content_copy</mat-icon>
         </button>
     </div>
-    <div style="padding:15px;border:1px solid lightgray">
-        <span style="padding: 15px;">{{RollNoGenerationSortBy}}</span>
+    <mat-divider style="position:relative; margin-top:10px;margin-bottom: 15px;"></mat-divider>
+    <div *ngIf="StudentClassList.length>0" style="padding-top:10px;border:1px solid lightgray">
+        <span style="padding: 15px;">Sort By - Gender, Name</span>
+        <mat-form-field appearance="outline" style="width: 100px;">
+            <mat-label>Gender</mat-label>
+            <mat-select formControlName="searchGenderAscDesc">
+                <mat-option value="asc">Asc</mat-option>
+                <mat-option value="desc">Desc</mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" style="width: 100px;">
+            <mat-label>Name</mat-label>
+            <mat-select formControlName="searchNameAscDesc">
+                <mat-option value="asc">Asc</mat-option>
+                <mat-option value="desc">Desc</mat-option>
+            </mat-select>
+        </mat-form-field>
         <button matTooltip="generate roll no" [disabled]="loading || StudentClassList.length==0 || Permission=='read'"
             class="mat-raised-button" (click)="GenerateRollNoOnList()">
             <mat-icon>hdr_auto</mat-icon>
