--- a/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
+++ b/src/app/modules/control/roleapppermission/RoleAppPermissiondashboard/RoleAppPermissiondashboard.component.html
@@ -4,31 +4,31 @@
     </div>
     <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <!-- <alert></alert> -->
-    <form [formGroup]="searchForm">        
-            <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Role</mat-label>
-                <mat-select formControlName="RoleId" (selectionChange)="enable($event)">
-                    <mat-option *ngFor="let role of Roles" [value]="role.MasterDataId">
-                        {{role.MasterDataName}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <mat-form-field appearance="outline" [style.width.px]="200">
-                <mat-label>Top Feature</mat-label>
-                <mat-select formControlName="PlanFeatureId" (selectionChange)="enable($event)">
-                    <mat-option [value]="0">select</mat-option>
-                    <mat-option *ngFor="let feature of TopPageFeatures" [value]="feature.PlanFeatureId">
-                        {{feature.label}}
-                    </mat-option>
-                </mat-select>
-            </mat-form-field>
-            <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent"
-                (click)="GetApplicationFeatureRole()">
-                 <mat-icon>search</mat-icon>
-                            <mat-icon *ngIf="loading">
-                                <mat-spinner diameter="20" color="Blue"></mat-spinner>
-                            </mat-icon>
-            </button>
+    <form [formGroup]="searchForm">
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Role</mat-label>
+            <mat-select formControlName="RoleId" (selectionChange)="enable($event)">
+                <mat-option *ngFor="let role of Roles" [value]="role.MasterDataId">
+                    {{role.MasterDataName}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" [style.width.px]="200">
+            <mat-label>Top Feature</mat-label>
+            <mat-select formControlName="PlanFeatureId" (selectionChange)="enable($event)">
+                <mat-option [value]="0">select</mat-option>
+                <mat-option *ngFor="let feature of TopPageFeatures" [value]="feature.PlanFeatureId">
+                    {{feature.label}}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <button [disabled]="loading" matTooltip="search" mat-raised-button color="accent"
+            (click)="GetApplicationFeatureRole()">
+            <mat-icon>search</mat-icon>
+            <mat-icon *ngIf="loading">
+                <mat-spinner diameter="20" color="Blue"></mat-spinner>
+            </mat-icon>
+        </button>
         <!-- </div> -->
     </form>
     <mat-divider></mat-divider>
@@ -80,8 +80,8 @@
                 </button>
             </mat-header-cell>
             <mat-cell *matCellDef="let element">
-                <button style="margin-right: 15px;" [disabled]="!element.Action || Permission=='read' || loading" matTooltip="save"
-                    mat-mini-fab (click)="Save(element)">
+                <button style="margin-right: 15px;" [disabled]="!element.Action || Permission=='read' || loading"
+                    matTooltip="save" mat-mini-fab (click)="Save(element)">
                     <mat-icon *ngIf="!loading">save</mat-icon>
                 </button>
                 <!-- <button [disabled]="!element.Action || Permission!='rwd' || loading" matTooltip="delete"
