--- a/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
+++ b/src/app/modules/schoolreports/feecollectionreport/feecollectionreport.component.html
@@ -52,33 +52,35 @@
     </div>
 </form>
 <div>
-    <mat-table #table [dataSource]="dataSource" style="overflow: auto;" matSort>
-        <ng-container matColumnDef="RollNo">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Roll No. </mat-header-cell>
-            <mat-cell *matCellDef="let element"> {{element.RollNo}} </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="Name">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Student </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.Name}}
-            </mat-cell>
-        </ng-container>
-        <ng-container matColumnDef="ClassRollNoSection">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.ClassRollNoSection}}
-            </mat-cell>
-        </ng-container>
-        <!-- <ng-container matColumnDef="MonthName">
-            <mat-header-cell *matHeaderCellDef mat-sort-header> Paid Till </mat-header-cell>
-            <mat-cell *matCellDef="let element">
-                {{element.MonthName}}
-            </mat-cell>
-        </ng-container> -->
-        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center" fxLayout="row">
-        </mat-row>
-    </mat-table>
-    <mat-paginator #PaidPaginator [pageSizeOptions]="[10, 25, 100]">
+    <div id="printSection">
+        <mat-table #table [dataSource]="dataSource" matSort>
+            <ng-container matColumnDef="RollNo">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Roll No. </mat-header-cell>
+                <mat-cell *matCellDef="let element"> {{element.RollNo}} </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="Name">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Student </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.Name}}
+                </mat-cell>
+            </ng-container>
+            <ng-container matColumnDef="ClassRollNoSection">
+                <mat-header-cell *matHeaderCellDef mat-sort-header> Class </mat-header-cell>
+                <mat-cell *matCellDef="let element">
+                    {{element.ClassRollNoSection}}
+                </mat-cell>
+            </ng-container>
+            <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+            <mat-row *matRowDef="let row; columns: DisplayColumns;" fxLayoutAlign="space-between center" fxLayout="row">
+            </mat-row>
+        </mat-table>
+    </div>
+    <mat-paginator style="display:flex;justify-content:center" #PaidPaginator [pageSizeOptions]="[10, 25, 100]">
     </mat-paginator>
+</div>
+<div style="display:flex;justify-content: center;width:100%;margin: 15px">
+    <button [disabled]="loading || ELEMENT_DATA.length ==0" matTooltip="print" color="accent"
+        printSectionId="printSection" [useExistingCss]="true" ngxPrint mat-raised-button>
+        <mat-icon>print</mat-icon>
+    </button>
 </div>
