--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <!-- <div fxLayoutAlign="start start" > -->
 <div style="display:flex;justify-content: space-around;width:100%;flex-wrap: wrap;margin-top:60px">
-    <!-- <div style="width:50%;font-size: 14px;margin:30px"> -->
-        <!-- <div style="font-size:26px;margin-bottom:30px;flex-wrap: wrap;">Features and Purpose of Education Management
+    <div style="width:50%;font-size: 14px;margin:30px">
+        <div style="font-size:26px;margin-bottom:30px;flex-wrap: wrap;">Features and Purpose of Education Management
             System
         </div>
         <p>
@@ -53,10 +53,8 @@
             <b>Evaluation and Assessment</b>
             This module enables to conduct online test and exams. Evaluation or assessment of the students can be conducted 
             by defining question and answer that can be re-used over and over again that can saves teachers' huge amount of time.
-
-            Teachers can evaluate online tests and exams using the school management system.
-        </p> -->
-    <!-- </div> -->
+        </p>
+    </div>
     <div style="margin-top:150px;">
         <mat-card>
             <mat-card-title style="margin:30px 0px 0px 30px;">Login</mat-card-title>
