--- a/src/app/modules/schoolreports/examtimetable/examtimetable.component.scss
+++ b/src/app/modules/schoolreports/examtimetable/examtimetable.component.scss
@@ -11,3 +11,9 @@ mat-cell{
     padding: 10px;
     align-self: stretch;
 }
+.element-row{
+    min-height: 29px;   
+   }
+.backgroundcolorgray{
+background-color: lightgray;
+}
